# CMakeUdemy

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  conanfile.py  vcpkg.json  vcpkg_memo.txt  메모장.txt
.github/workflows/: documentation.yml  windows.yml
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  CPM.cmake  CodeCoverage.cmake  ConfigSafeGuards.cmake  Docs.cmake  LTO.cmake  Sanitizer.cmake  Tools.cmake  Warnings.cmake  module_설명.txt
configured/: CMakeLists.txt
docs/: Doxyfile
docs/html/: CMakeLists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h_source.html
memos/: ClangFormat.txt  ClangTidy.txt  Configure와Generate차이.txt  ExternalLibraryTool전체요약.txt  LTO_memo.txt  WindowsCMake.txt  편의기능_PublicPrivateLinking.txt
src/: CMakeLists.txt
src/my_lib/: CMakeLists.txt  Makefile  cmake_install.cmake  my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
